--- a/gradle/depencencies.gradle
+++ b/gradle/depencencies.gradle
@@ -1,6 +1,6 @@
 buildscript {
    ext {
-        springBootVersion = '1.3.1.RELEASE'
+        springBootVersion = '1.3.3.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -54,7 +54,9 @@ dependencies {
     compile('org.springframework.boot:spring-boot-actuator-docs')
     compile('org.springframework.boot:spring-boot-starter-aop')
     compile('org.springframework.boot:spring-boot-starter-cache')
-    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+     compile('org.springframework.boot:spring-boot-starter-data-jpa'){
+         exclude module: 'hibernate-entitymanager'
+    }
        // compile('org.springframework.boot:spring-boot-starter-data-rest')
        // compile('org.springframework.data:spring-data-rest-hal-browser')
        // compile('org.springframework.boot:spring-boot-devtools')
@@ -87,8 +89,8 @@ dependencies {
    
     compile 'javax.validation:validation-api:1+'
     compile 'org.hibernate:hibernate-validator:5+'
-    compile 'org.hibernate:hibernate-core:5+'
-    compile 'org.hibernate:hibernate-entitymanager:5.0+'
+       compile 'org.hibernate:hibernate-core:5.1.0.Final'
+    compile 'org.hibernate:hibernate-entitymanager:5.1.0.Final'
     compile 'javax.money:money-api:1+'
     compile 'org.javamoney:moneta:1+'
    
@@ -143,6 +145,7 @@ test {
     testLogging.showStandardStreams = true
 }
 
+
 configurations {
     all*.exclude group: "commons-logging", module: "commons-logging"
 }
@@ -159,13 +162,16 @@ configurations.all {
         
         if (details.requested.group == 'org.slf4j') {
             details.useVersion '1.7.13'
-        }     
-        if (details.requested.name == 'springloaded') {
-            details.useVersion '1.2.5.RELEASE'
         }
+             
+       
       
-        if (details.requested.group == 'org.hibernate') {
-            details.useVersion '5.0.2.Final'
+        if (details.requested.group == 'hibernate-entitymanager') {
+            details.useVersion '5.1.0.Final'
+        }
+        
+        if (details.requested.group == 'hibernate-core') {
+            details.useVersion '5.1.0.Final'
         }
     }
 }
