--- a/src/main/resources/git.properties
+++ b/src/main/resources/git.properties
@@ -1,10 +1,10 @@
 #
-#Sat Jan 30 18:38:07 CET 2016
-git.commit.id=a7795ac1867b69d066770b1c98a783e3b223936f
-git.commit.time=1454149768
-git.commit.user.name=przodownikR1
-git.commit.id.abbrev=a7795ac
+#Thu Mar 17 23:06:15 CET 2016
+git.commit.id=24ec937fbbab843f63c69b597eb2d25682d80430
+git.commit.time=1457993422
+git.commit.user.name=Slawomir Borowiec
+git.commit.id.abbrev=24ec937
 git.branch=master
-git.commit.message.short=Initial commit
-git.commit.user.email=przodownikR1@gmail.com
-git.commit.message.full=Initial commit
+git.commit.message.short=sonar properties clean
+git.commit.user.email=przodownik@tlen.pl
+git.commit.message.full=sonar properties clean\n
